--- a/Veri Yapilari - odev.ipynb
+++ b/Veri Yapilari - odev.ipynb
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "# Son olarak, bir önceki sorudaki listeden yaz ayının kaç gün sürdüğünü hesaplayın.\n",
+    "# Son olarak, bir önceki sorudaki listeden yaz ayinin kaç gün sürdüğünü hesaplayın.\n",
     "\n",
     "yaz_gun = ag[5][1]+ag[6][1]+ag[7][1]\n",
     "print(yaz_gun)"
